# tracking-sdk

./: README.md  pyproject.toml  setup.py
tests/: test_cliente.py
tracking_sdk/: __init__.py  cliente.py  django_middleware.py
